# GeoNest

./: .gitignore  CHANGELOG.md  COPYING  LICENSE  README.md  SOURCE_OFFER.txt  THIRD_PARTY_NOTICES.md  build-profile.example.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: layered_image.json
common/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package.json5
common/src/main/ets/constants/: MapInteractionConstants.ets
common/src/main/ets/platform/: CollaborationDeviceCheck.ets
common/src/main/ets/style/: MaterialStyle.ets  SafeMaterialModifier.ets
docs/: GeoNest-GIS-porting-plan.md  geonest-gis-harmony-page.html
docs/future/api26/: MaterialStyleApi26.ets  README.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/types/libgeonestgis/: Index.d.ts  oh-package.json5
entry/src/main/ets/component/: AppSettingsSheet.ets  AttributeTableSheet.ets  CoordinateSystemPicker.ets  ExpressionWorkbenchSheet.ets  GisFeatureInfoPanel.ets  GisMapCanvas.ets  GisScene3D.ets  LaunchSplash.ets  MapLayoutSheet.ets  ProjectDeliverySheet.ets  ProjectSheet.ets  QgisCoreSheet.ets  QgisProcessingBrowserSheet.ets  RasterDisplaySheet.ets  SymbologySheet.ets  ToolRunnerSheet.ets  TopologyReviewSheet.ets  VectorEditSheet.ets  XYTableToPointSheet.ets
entry/src/main/ets/coordinator/: WorkbenchImportCoordinator.ets  WorkbenchLayerPresentationCoordinator.ets  WorkbenchProjectTextWriter.ets  WorkbenchSearchCoordinator.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/entryformability/: GeoNestFormAbility.ets
entry/src/main/ets/gis/: GestureShareModel.ets  GisNativeBridge.ets  GisService.ets
entry/src/main/ets/model/: AppPreferences.ets  GeoNestModels.ets  MultiMapState.ets  TopologyModels.ets
entry/src/main/ets/pages/: Index.ets  MapCompare.ets
entry/src/main/ets/utils/: GeoNestCloudSyncManager.ets  GeoNestFormStateStore.ets  HuaweiAuthManager.ets  MaterialStyle.ets  ProcessingHistoryManager.ets  ProcessingNotificationManager.ets  ProjectRecoveryManager.ets  PublicDataDirectoryManager.ets  SafeMaterialModifier.ets  TopologyRuleStore.ets
entry/src/main/ets/view/: GeoNestWorkbenchShell.ets  GeoNestWorkbenchView.ets
entry/src/main/ets/widget/pages/: GeoNestCard.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/media/: layered_image.json
entry/src/main/resources/base/profile/: geonest_form_config.json  main_pages.json
entry/src/main/resources/dark/element/: color.json  string.json
entry/src/main/resources/rawfile/: 140000.dbf  140000.prj  140000.shp  140000.shx  140800.dbf  140800.shp  140800.shx  OPEN_SOURCE_NOTICES.txt  check_points.dbf  check_points.shp  check_points.shx  geonest_terrain.gltf  landuse.dbf  landuse.shp  landuse.shx  online_tile_basemap.html  road_centerline.dbf  road_centerline.shp  road_centerline.shx
features/workbench/: Index.ets  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
features/workbench/src/main/: module.json5
features/workbench/src/main/ets/component/: WorkbenchBackstage.ets  WorkbenchCatalogPanel.ets  WorkbenchCloudSyncSheet.ets  WorkbenchCommandSearchPopup.ets  WorkbenchContentsPanel.ets  WorkbenchMapStatusBar.ets  WorkbenchMapToolbar.ets  WorkbenchRibbonPanel.ets  WorkbenchRibbonTabs.ets  WorkbenchStatusSegment.ets  WorkbenchTitleArea.ets  WorkbenchToolsPanel.ets  WorkbenchWindowTitleBar.ets
features/workbench/src/main/ets/constants/: WorkbenchConstants.ets
features/workbench/src/main/ets/model/: WorkbenchModels.ets
features/workbench/src/main/ets/service/: WorkbenchFileService.ets  WorkbenchRecentProjectService.ets  WorkbenchTextService.ets
features/workbench/src/main/ets/viewmodel/: WorkbenchSearchViewModel.ets
features/workbench/src/main/resources/base/element/: color.json  string.json
features/workbench/src/main/resources/dark/element/: color.json  string.json
native/gis_core/: README.md
native/gis_core/include/: geonest_gis_core.h
native/gis_core/src/: geonest_gis_core.cpp  geonest_gis_core_gdal.cpp  geonest_gis_core_new.cpp  geonest_gis_core_qgis.cpp  geonest_pointcloud_processing.inc  geonest_spatial_analysis.inc
native/napi_bridge/: README.md
native/napi_bridge/include/: geonest_napi_bridge.h
native/napi_bridge/src/: geonest_napi_bridge.cpp
native/qgis_core_probe/: CMakeLists.txt  README.md
native/qgis_core_probe/src/: qgis_core_vector_probe.cpp
native/qt6_ohos_probe/: CMakeLists.txt  README.md
native/qt6_ohos_probe/src/: qt6_ohos_probe.cpp
scripts/: build_entry_hap.ps1  build_release.ps1  package_corresponding_source.ps1
scripts/build_native/: README.md  apply_qt6_ohos_patches.ps1  build_expat_ohos.ps1  build_freexl_ohos.ps1  build_gdal_ohos.ps1  build_geos_ohos.ps1  build_libzip_ohos.ps1  build_proj_ohos.ps1  build_protobuf_ohos.ps1  build_qgis_core_ohos.ps1  build_qt6_host_tools.ps1  build_qt6_ohos.ps1  build_qt6_ohos_probe.ps1  build_qtkeychain_ohos.ps1  build_sqlite_ohos.ps1  build_zstd_ohos.ps1  prepare_qgis_source.ps1
